Add pagination/infinite scroll to recipes, books, friends pages + fix image CSS bug
